--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  
+    <div id="info">
+      <a href="https://github.com/amcc/covid/">source</a>
+    </div>
 
 </body></html>
