--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
+    
     <script src="p5.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
